cluster/eu-de-01/yagpdb/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: yagpdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/postgres:11
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            tcpSocket:
              port: postgres
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: postgres-data
          hostPath:
            path: /mnt/yagpdb/db
            type: DirectoryOrCreate
