cluster/eu-de-01/yagpdb/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: yagpdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: docker.io/redis:7
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: redis-data
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: redis
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: redis-data
          hostPath:
            path: /mnt/yagpdb/redis
            type: DirectoryOrCreate
