cluster/eu-de-01/yagpdb/yagpdb.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: yagpdb
  namespace: yagpdb
spec:
  selector:
    app: yagpdb
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: yagpdb
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: yagpdb
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
